--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -2,7 +2,19 @@
 @tailwind components;
 
 .input {
-  @apply bg-gray-100 shadow-inner focus:ring-2  focus:ring-green-600 focus:ring-opacity-90 focus:outline-none py-3 px-5 rounded-lg;
+  @apply bg-gray-100 shadow-inner focus:ring-2  focus:ring-yellow-400 focus:ring-opacity-90 focus:outline-none py-3 px-5 rounded-lg;
+}
+
+.container {
+  @apply max-w-screen-2xl mx-auto;
+}
+
+.link {
+  @apply text-yellow-400 hover:underline;
+}
+
+.btn {
+  @apply text-lg font-medium focus:outline-none text-white py-4  transition-colors bg-yellow-400 hover:bg-yellow-500;
 }
 
 @tailwind utilities;
